--- a/client/style/style.css
+++ b/client/style/style.css
@@ -3,3 +3,18 @@ html{
   margin: 0;
   box-sizing: border-box;
 }
+
+.collection-item{
+  display: flex;
+  justify-content: space-between;
+}
+
+.material-icons{
+  cursor: pointer;
+  margin-right: 5px;
+}
+
+.vote-box{
+  display: flex;
+  align-items: center;
+}
